# libframeworkd-glib

./: AUTHORS  README  configure.ac
src/: Makefile.am  dialer-marshal.c  dialer-marshal.h  dialer-marshal.list  frameworkd-glib-call.c  frameworkd-glib-call.h  frameworkd-glib-dbus.c  frameworkd-glib-dbus.h  frameworkd-glib-device.c  frameworkd-glib-phonegui.c  frameworkd-glib-phonegui.h  frameworkd-glib-sim.c
src/dbus/: call.xml
src/odeviced/: Makefile.am  frameworkd-glib-odeviced-audio.c  frameworkd-glib-odeviced-audio.h  frameworkd-glib-odeviced-dbus.c  frameworkd-glib-odeviced-dbus.h  frameworkd-glib-odeviced-idlenotifier.c  frameworkd-glib-odeviced-idlenotifier.h  frameworkd-glib-odeviced-powersupply.c  frameworkd-glib-odeviced-powersupply.h
src/odeviced/dbus/: audio.h  audio.xml  idlenotifier.h  input.h  input.xml  powersupply.h
src/ogsmd/: Makefile.am  dialer-marshal.list  frameworkd-glib-ogsmd-call.c  frameworkd-glib-ogsmd-call.h  frameworkd-glib-ogsmd-dbus.c  frameworkd-glib-ogsmd-dbus.h  frameworkd-glib-ogsmd-device.c  frameworkd-glib-ogsmd-device.h  frameworkd-glib-ogsmd-network.c  frameworkd-glib-ogsmd-network.h  frameworkd-glib-ogsmd-sim.c  frameworkd-glib-ogsmd-sim.h  frameworkd-glib-ogsmd-sms.c  frameworkd-glib-ogsmd-sms.h
src/ogsmd/dbus/: call.h  call.xml  network.h  network.xml  sim.h  sim.xml  sms.h  sms.xml
src/opimd/: Makefile.am  frameworkd-glib-opimd-contacts.c  frameworkd-glib-opimd-contacts.h  frameworkd-glib-opimd-dbus.c  frameworkd-glib-opimd-dbus.h  frameworkd-glib-opimd-messages.c  frameworkd-glib-opimd-messages.h  frameworkd-glib-opimd-sources.c  frameworkd-glib-opimd-sources.h
src/opimd/dbus/: contacts.h  contacts.xml  messages.h  messages.xml  sources.h  sources.xml
src/ousaged/: Makefile.am  frameworkd-glib-ousaged-dbus.c  frameworkd-glib-ousaged-dbus.h  frameworkd-glib-ousaged.c  frameworkd-glib-ousaged.h
src/ousaged/dbus/: ousaged.h  ousaged.xml
