libframeworkd_glib_HEADERS = \
        frameworkd-glib-odeviced-dbus.h frameworkd-glib-odeviced-idlenotifier.h \
	frameworkd-glib-odeviced-powersupply.h frameworkd-glib-odeviced-audio.h \
	dbus/idlenotifier.h dbus/audio.h dbus/powersupply.h

libframeworkd_glibdir = $(includedir)/frameworkd-glib/odeviced/

