libframeworkd_glib_HEADERS = \
        frameworkd-glib-opimd-dbus.h \
		  frameworkd-glib-opimd-contacts.h \
		  frameworkd-glib-opimd-messages.h \
		  frameworkd-glib-opimd-sources.h \
		  dbus/contacts.h \
		  dbus/messages.h \
		  dbus/sources.h

libframeworkd_glibdir = $(includedir)/frameworkd-glib/opimd/

